<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.LoginActivity">
    <include
        android:id="@+id/toolbar_default"
        layout="@layout/toolbar_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:padding="10dp"
        android:text="@string/msg_Login"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_default"
        android:textSize="16sp"
        android:layout_margin="20dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_code"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_header"
        android:background="@drawable/square_border_box"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="+91"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"

        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtMobile"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_header"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/square_border_box"
        android:fontFamily="@font/opensans_regular"
        android:hint="@string/hint_mobile"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/text_code"
        app:layout_constraintRight_toRightOf="parent"
         />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/square_curve_btn"
        android:fontFamily="@font/opensans_bold"
        android:gravity="center"
        android:padding="10dp"

        android:text="@string/continue_txt"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/edtMobile"
        android:textSize="16sp"
        android:layout_margin="40dp"
        android:layout_marginTop="50dp"
  />
</androidx.constraintlayout.widget.ConstraintLayout>